fix(check in): vertical overflow

--- a/src/components/CheckIn.module.scss
+++ b/src/components/CheckIn.module.scss
@@ -15,11 +15,16 @@
   top: 4rem;
   left: 4rem;
   display: flex;
+  overflow: auto;
   width: 20rem;
   height: calc(100% - 8rem);
   flex-direction: column;
   padding: 2rem;
   box-shadow: 0 0 38px 2px rgba(0, 0, 0, 46%);
+
+  label:last-of-type {
+    margin-bottom: 1rem;
+  }
 
   & > *:not(:first-child) {
     margin-top: 1rem;
